<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_gui_change_controllers</name>
  <version>1.3.1</version>
  <description>A GUI plugin to set the UR10 arm and SR hand to teach mode </description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr-visualization</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-visualization/issues</url>

  <author>Toni Oliver</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sr_robot_msgs</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/sr_change_controllers_plugin.xml" />
  </export>
</package>
