<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_gui_state_saver</name>
  <version>1.3.1</version>
  <description>A GUI plugin for saving the current robot state to mongo via warehouse services.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <author email="software@shadowrobot.com">Dan Greenwald</author>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_robot_commander</build_depend>
  <build_depend>sr_visualization_common_icons</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sr_robot_commander</run_depend>
  <run_depend>sr_visualization_common_icons</run_depend>

<export>
    <rqt_gui plugin="${prefix}/sr_state_saver.xml" />
</export>

</package>
