<package>
  <name>sr_visualization_common</name>
  <description>This stack contains the different gui plugins used with the shadow robot stacks.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <version>0.1.0</version>
  <license>GPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_visualization</url>
  <url type="repository">https://github.com/shadow-robot/sr_visualization_common</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_visualization_common/issues</url>

  <author email="software@shadowrobot.com">The Shadow Robot software team. </author>

  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>sr_gui_joint_slider</run_depend>
  <run_depend>sr_visualization_common_icons</run_depend>

  <export>
    <metapackage />
  </export>
</package>
